# facedetection

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chenyixuan/www/facedetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/chenyixuan/www/facedetection/: CheckPermissionsActivity.java  DetectionBasedTracker.java  FdActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/chenyixuan/www/facedetection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
